--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
+    "pmx": "^0.6.8",
     "serve-favicon": "~2.3.0"
   }
 }
