--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.14.2",
     "mongoose": "^4.7.0",
     "morgan": "^1.6.1",
+    "newrelic": "^1.34.0",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
